PROJECT( hellocv )
cmake_minimum_required(VERSION 2.8)
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE( hellocv hellocv )
TARGET_LINK_LIBRARIES( hellocv ${OpenCV_LIBS} )
ADD_EXECUTABLE( smoocv smoocv )
TARGET_LINK_LIBRARIES( smoocv ${OpenCV_LIBS} )
ADD_EXECUTABLE( superrescv superrescv )
TARGET_LINK_LIBRARIES( superrescv ${OpenCV_LIBS} )
ADD_EXECUTABLE( superres2 superres2 )
TARGET_LINK_LIBRARIES( superres2 ${OpenCV_LIBS} )
